@@ -1,5 +1,14 @@
 2007-11-27  Alexander Larsson  <alexl@redhat.com>
 
+        * gio/Makefile.am:
+        * gio/gurifuncs.[ch]:
+        * glib/Makefile.am:
+        * glib/gstring.[ch]:
+        * glib/gurifuncs.[ch]:
+	Moved gurifuncs from gio to glib
+
+2007-11-27  Alexander Larsson  <alexl@redhat.com>
+
         * gio/gfileinfo.[ch]:
         * glib/gfileutils.[ch]:
         Move g_format_file_size_for_display from gio to glib
